Dashboard: added the basic structure and styling for the admin dashboard.

--- a/resources/css/___variables.scss
+++ b/resources/css/___variables.scss
@@ -4,8 +4,11 @@ $theme4: #df852d;
 $theme3: #eed9c4;
 
 $background_color: #2b3230;
+$faded_background: #3b3b3b;
+
 $text_color: #efefef;
 $link_color: $theme2;
+$faded_text: #acacac;
 
 $danger: #ff0000;
 $success: #008000;
