--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -6,10 +6,12 @@
 @import "_aside";
 @import "_footer";
 @import "_alerts";
+@import "_tables";
 @import "_forms";
 @import "_buttons";
 
 @import "HomePage";
+@import "ContactPage";
 @import "Authentication";
 @import "MainApp";
 @import "Dashboard";
