--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,16 @@
+.read {
+  color: #acacac;
+  font-style: italic;
+}
+
+.center {
+  text-align: center;
+}
+
+.stack {
+  display: grid;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -361,6 +374,90 @@ footer .copyright {
   color: #008000;
 }
 
+.table {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+.table .header {
+  display: grid;
+  gap: 0.4em;
+  align-items: center;
+  margin: 0 0 0.8em;
+}
+.table .header .details .title {
+  font-size: 1em;
+}
+.table .header .details .stats span {
+  font-size: 0.75em;
+}
+.table .header input {
+  padding: 4px 12px;
+  font-size: 1em;
+  border: 1px solid #666666;
+  background: transparent;
+  border-radius: 32px;
+  color: #efefef;
+}
+.table .header input::-moz-placeholder {
+  color: #efefef;
+  font-style: italic;
+}
+.table .header input::placeholder {
+  color: #efefef;
+  font-style: italic;
+}
+.table .header .btn {
+  margin: 0.8em 0 0;
+}
+.table .header .btn a {
+  background: #fff;
+  color: #000;
+  padding: 4px 12px;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 1em;
+}
+.table .header .btn a:hover {
+  background: #000;
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+.table table {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+.table table thead {
+  background: #fff;
+  color: #000;
+}
+.table table thead th {
+  padding: 2px 4px;
+  font-size: 0.9em;
+  text-align: left;
+}
+.table table thead th:first-of-type {
+  border-radius: 4px 0 0 0;
+}
+.table table thead th:last-of-type {
+  border-radius: 0 4px 0 0;
+}
+.table table tbody tr {
+  border-bottom: 1px solid #666666;
+}
+.table table tbody tr td {
+  padding: 4px;
+  font-size: 0.95em;
+}
+
+@media screen and (width >= 726px) {
+  .table .header {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .table .header .btn {
+    justify-self: right;
+  }
+}
 form label {
   font-size: 1em;
   color: #363636;
@@ -506,6 +603,62 @@ button:hover {
   background: #ff0000;
 }
 
+.ContactPage .container {
+  display: grid;
+  gap: 1em;
+  align-items: center;
+}
+.ContactPage .container .text .title {
+  font-size: 1.2em;
+  margin: 0 0 0.8em;
+}
+@media screen and (width >= 726px) {
+  .ContactPage .container .text .title {
+    font-size: 3.2em;
+  }
+}
+.ContactPage .container .text .content {
+  display: grid;
+  font-size: 2em;
+}
+
+.MainApp .UserMessage .header p span {
+  font-size: 0.85em;
+}
+.MainApp .UserMessage .header p span:first-of-type {
+  font-size: 1em;
+  font-weight: bold;
+}
+.MainApp .UserMessage .body {
+  padding: 12px 5%;
+  color: #000;
+}
+.MainApp .UserMessage .body .details .message_details .time {
+  font-size: 0.75em;
+  text-align: center;
+}
+.MainApp .UserMessage .body .details .message_details .user_message {
+  background: #dcfcfa;
+  width: 70%;
+  margin: 0.5em 0 2em;
+  padding: 8px 15px;
+  border-radius: 8px 8px 32px 8px;
+  box-shadow: 2px 2px 4px #6e6e6e;
+}
+.MainApp .UserMessage .body form {
+  margin: 2em 0 0;
+  padding: unset;
+}
+
+@media screen and (width >= 726px) {
+  .ContactPage .container {
+    grid-template-columns: 1fr 1fr;
+  }
+  .UserMessage {
+    width: 40dvw;
+    margin: auto;
+  }
+}
 .Authentication {
   height: 90dvh;
   display: flex;
@@ -549,6 +702,9 @@ button:hover {
     width: 15%;
   }
 }
+.Dashboard .section {
+  margin: 0 0 0.8em;
+}
 .Dashboard .stats {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -568,6 +724,13 @@ button:hover {
 .Dashboard .stats .stat span:last-of-type {
   font-size: 0.85em;
   color: #acacac;
+}
+.Dashboard .messages .message {
+  border-bottom: 1px solid #666666;
+  padding: 4px 0;
+}
+.Dashboard .messages .message p span {
+  font-size: 0.8em;
 }
 
 @media screen and (width >= 726px) {
