--- a/resources/css/__aside.scss
+++ b/resources/css/__aside.scss
@@ -1,4 +1,3 @@
-$aside_text_color: #fff;
 $aside_width: 15%;
 
 aside {
@@ -13,93 +12,70 @@ aside {
         @include desktop_only;
     }
 
-    i {
-        font-size: 1.5em;
-    }
-
-    a {
-        color: $aside_text_color;
-        text-decoration: none;
-    }
-
     .header {
+        padding: 0.8em 0 0;
+
         img {
-            width: 40px;
-            height: 40px;
-            padding: 2px;
+            width: 35px;
+            height: 35px;
             border-radius: 50%;
-            border: 1px solid $success;
         }
     }
 
     ul {
         list-style: none;
-        margin: 0.4em 0 0;
+        margin: 0.4em 0;
 
         li {
-            padding: 2px 4px;
+            padding: 4px 4px;
+            border-bottom: 1px solid $faded_line;
+
+            &:first-of-type {
+                border-top: 1px solid $faded_line;
+            }
+
+            i {
+                @include font_size(1.5em, 1em);
+            }
+
             a {
-                opacity: 0.75;
+                color: $text_color;
+            }
+        }
+
+        .active {
+            a {
+                color: $link_color;
+                font-weight: bold;
             }
         }
     }
 
-    .active,
-    ul li:hover {
-        color: $link_color;
-
-        a {
-            color: $aside_text_color;
-            font-weight: bold;
-            opacity: 1;
-        }
-    }
-
     .footer {
-        position: absolute;
-        bottom: 1.2em;
-        width: 90%;
-        margin: 0 auto;
-
         .logout {
-            margin: 0.5em 0 0;
-            form {
-                button {
-                    padding: unset;
-                    background: none;
-                    i {
-                        color: $danger;
-                    }
+            button {
+                background: $danger;
+                i {
+                    @include font_size(1.2em, 1em);
                 }
             }
         }
     }
 }
 
-@media screen and (width >= 726px) {
+@media screen and (min-width: 726px) {
     aside {
         text-align: left;
 
-        i {
-            font-size: 0.92em;
-        }
-
         .header {
-            padding: 0.2em 0;
             display: grid;
             grid-template-columns: 40px auto;
-            gap: 0.2em;
+            gap: 0.1em;
             align-items: center;
             justify-content: start;
 
-            img {
-                width: 35px;
-                height: 35px;
-            }
-
             span {
-                font-size: 0.85em;
-                color: $aside_text_color;
+                font-size: 0.8em;
             }
 
             .text {
@@ -109,45 +85,31 @@ aside {
 
         ul {
             li {
-                border-bottom: 1px solid $faded_line;
-
-                &:first-of-type {
-                    border-top: 1px solid $faded_line;
-                }
-
                 a {
-                    display: flex;
+                    display: grid;
+                    grid-template-columns: 0.95em 1fr;
                     align-items: center;
-                    gap: 0.2em;
-                    font-size: 0.92em;
-                    letter-spacing: 0.2px;
+                    gap: 0.5em;
+
+                    i {
+                        justify-self: center;
+                    }
                 }
             }
         }
 
         .footer {
-            left: 0;
-            margin: 0 0.4em 0;
+            position: absolute;
+            bottom: 1.5em;
+            width: 90%;
+            margin: auto;
 
-            .logout button {
+            button {
+                width: 100%;
                 display: flex;
-                align-items: center;
                 gap: 0.4em;
-            }
-
-            .logout {
-                form {
-                    button {
-                        justify-content: center;
-                        background: $danger;
-                        color: #fff;
-                        padding: 4px 16px;
-
-                        i{
-                            color: #fff;
-                        }
-                    }
-                }
+                align-items: center;
+                justify-content: center;
             }
         }
     }
