--- a/resources/css/__tables.scss
+++ b/resources/css/__tables.scss
@@ -1,6 +1,3 @@
-$header_background: #fff;
-$header_color: #000;
-
 .table {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
@@ -35,15 +32,14 @@ $header_color: #000;
         }
 
         input {
-            padding: 4px 12px;
+            padding: 6px 14px;
             font-size: 1em;
             border: 1px solid $faded_line;
             background: transparent;
             border-radius:  32px;
-            color: #efefef;
 
             &::placeholder {
-                color: #efefef;
+                color: $faded_text;
                 font-style: italic;
             }
         }
@@ -52,16 +48,16 @@ $header_color: #000;
             margin: 0.8em 0 0;
 
             a {
-                background: #fff;
-                color: #000;
-                padding: 4px 12px;
+                background: $elements_background;
+                color: $elements_color;
+                padding: 6px 12px;
                 border-radius: 4px; 
                 font-weight: bold;
                 font-size: 1em;
 
                 &:hover {
-                    background: #000;
-                    color: #fff;
+                    opacity: 0.8;
+                    box-shadow: 2px 2px 4px solid $elements_background;
                     transition: all 0.3s ease-in-out;
                 }
             }
@@ -74,8 +70,8 @@ $header_color: #000;
         border-collapse: collapse;
 
         thead {
-            background: $header_background;
-            color: $header_color;
+            background: $elements_background;
+            color: $elements_color;
 
             th {
                 padding: 2px 4px;
@@ -99,13 +95,33 @@ $header_color: #000;
                 td {
                     padding: 4px;
                     font-size: 0.95em;
+
+                    p,
+                    div{
+                        &:not(:first-of-type) {
+                            margin: 0.2em 0 0;
+                        }
+                    }
+
+                    img {
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 50%;
+                    }
+                }
+
+                .action_buttons {
+                    display: flex;
+                    gap: 0.8em;
+                    justify-content: center;
+                    align-items: center;
                 }
             }
         }
     }
 }
 
-@media screen and (width >= 726px) {
+@media screen and (min-width: 1024px) {
     .table {
         .header {
             grid-template-columns: 1fr 1fr 1fr;
