--- a/resources/css/_Authentication.scss
+++ b/resources/css/_Authentication.scss
@@ -31,7 +31,7 @@
     }
 }
 
-@media screen and (width >= 726px) {
+@media screen and (min-width: 726px) {
     .Authentication {
         .Login,
         .ForgotPassword,
