--- a/resources/css/_ContactPage.scss
+++ b/resources/css/_ContactPage.scss
@@ -63,7 +63,7 @@
     }
 }
 
-@media screen and (width >= 726px) {
+@media screen and (min-width: 726px) {
     .ContactPage {
         .container {
             grid-template-columns: 1fr 1fr;
