--- a/resources/css/_MainApp.scss
+++ b/resources/css/_MainApp.scss
@@ -7,7 +7,7 @@
     }
 }
 
-@media screen and (width >= 726px) {
+@media screen and (min-width: 726px) {
     .MainApp {
         aside {
             width: $aside_width;
