--- a/resources/css/___variables.scss
+++ b/resources/css/___variables.scss
@@ -10,12 +10,16 @@ $warning: #c28005;
 
 
 // $background_color: #2b3230;
-$background_color: #ffffff;
+$background_color: #fff;
 // $text_color: #efefef;
 $text_color: #000;
 
 
-$dashboard_background: #096b65;
+$themed_background: #1a237e;
+$themed_color: #fff;
+
+
+$dashboard_background: #defffd;
 $dashboard_color: #fff;
 
 
