--- a/resources/css/__footer.scss
+++ b/resources/css/__footer.scss
@@ -1,5 +1,6 @@
 footer {
-    background: darken($background_color, 15%);
+    background: $themed_background;
+    color: $themed_color;
     
     .container {
         padding: 2.8em 5%;
@@ -19,9 +20,18 @@ footer {
             display: flex;
             flex-direction: column;
             gap: 0.5em;
+
+            a {
+                color: $themed_color;
+                font-weight: bold;
+            }
         }
 
         .contacts {
+            p {
+                font-weight: bold;
+            }
+            
             .socials {
                 margin: 0.8em 0 0;
                 img {
@@ -40,7 +50,7 @@ footer {
     }
 }
 
-@media screen and (width >= 726px) {
+@media screen and (min-width: 726px) {
     footer {
         .container {
             display: grid;
