--- a/resources/css/___global.scss
+++ b/resources/css/___global.scss
@@ -15,9 +15,15 @@ body {
 }
 
 img {
-    height: 100%;
-    width: 100%;
     object-fit: cover;
+}
+
+.image {
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 }
 
 a {
