--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -47,10 +47,15 @@ body {
 }
 
 img {
-  height: 100%;
-  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 a {
@@ -629,6 +634,48 @@ footer .copyright {
   }
 }
 
+.cards {
+  display: -ms-grid;
+  display: grid;
+  gap: 1.5em;
+}
+
+.cards .card {
+  -webkit-box-shadow: 4px 6px 8px #808080;
+          box-shadow: 4px 6px 8px #808080;
+  border-radius: 8px;
+}
+
+.cards .card a {
+  color: #000;
+}
+
+.cards .card .image {
+  height: 300px;
+  padding: 4px;
+}
+
+.cards .card .text {
+  padding: 10px 16px 15px;
+}
+
+.cards .card .text .details .title {
+  font-size: 1.28em;
+  margin: 0 0 0.8em;
+}
+
+.cards .card .text .details .price {
+  font-size: 1.2em;
+  color: #008000;
+}
+
+@media screen and (min-width: 1024px) {
+  .cards {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+}
+
 form label {
   font-size: 1em;
   color: #363636;
@@ -655,22 +702,22 @@ form textarea {
 
 form input::-webkit-input-placeholder,
 form select::-webkit-input-placeholder {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 form input:-ms-input-placeholder,
 form select:-ms-input-placeholder {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 form input::-ms-input-placeholder,
 form select::-ms-input-placeholder {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 form input::placeholder,
 form select::placeholder {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 form .inputs {
@@ -1092,9 +1139,43 @@ button:hover {
   height: auto;
 }
 
+.MainApp .app_content .system_nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1em;
+  margin: 0.2em 0 0.4em;
+}
+
+.MainApp .app_content .system_nav a {
+  font-weight: bold;
+}
+
+.MainApp .app_content .system_nav a:not(:last-child),
+.MainApp .app_content .system_nav span:not(:last-child) {
+  font-weight: bold;
+}
+
+.MainApp .app_content .system_nav a:not(:last-child)::after,
+.MainApp .app_content .system_nav span:not(:last-child)::after {
+  content: " / ";
+  color: #000;
+  margin: 0 0 0 0.6em;
+}
+
+.MainApp .app_content .row_container {
+  display: -ms-grid;
+  display: grid;
+  gap: 2em;
+}
+
 @media screen and (min-width: 726px) {
   .MainApp aside {
     width: 15%;
+  }
+  .MainApp .app_content .row_container {
+    -ms-grid-columns: 2fr 1fr;
+        grid-template-columns: 2fr 1fr;
   }
 }
 
