Products: finished CRUD logic for products.

--- a/resources/css/___variables.scss
+++ b/resources/css/___variables.scss
@@ -41,6 +41,14 @@ $light_link_color: lightblue;
 
 
 
+.danger {
+    color: $danger;
+}
+
+.success {
+    color: $success;
+}
+
 .read,
 .inactive {
     color: $faded_text;
