--- a/resources/css/_MainApp.scss
+++ b/resources/css/_MainApp.scss
@@ -33,6 +33,32 @@
     }
 }
 
+.Products {
+    .product_images {
+        display: flex;
+        gap: 1.5em;
+        margin: 0 0 0.8em;
+
+        .product_image {
+            position: relative;
+            border: 1px solid $faded_line;
+            border-radius: 8px;
+
+            img {
+                object-fit: contain;
+            }
+
+            a {
+                position: absolute;
+                top: -15px;
+                right: -5px;
+                font-size: 1.2em;
+                color: $danger;
+            }
+        }
+    }
+}
+
 @media screen and (min-width: 726px) {
     .MainApp {
         aside {
