--- a/resources/css/_MainApp.scss
+++ b/resources/css/_MainApp.scss
@@ -59,6 +59,176 @@
     }
 }
 
+.Cart,
+.Checkout {
+    min-height: 90dvh;
+
+    .header {
+        @include flex_center;
+        flex-direction: column;
+        gap: 0.8em;
+        padding: 32px 0;
+        margin: 0 0 3.2em;
+
+        h1 {
+            color: $themed_background;
+            font-size: 1.8em;
+        }
+    }
+
+    .container {
+        .body {
+            display: grid;
+            align-items: flex-start;
+            gap: 4em;
+        }
+
+        .summary {
+            background: rgb(233, 238, 255);
+            padding: 32px;
+            border-radius: 8px;
+
+            .title {
+                font-size: 1.48em;
+                margin: 0 0 1.2em;
+                text-align: center;
+            }
+
+            p {
+                &:not(:first-of-type) {
+                    margin: 0 0 0.8em;
+                    font-size: 1.2em;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    gap: 2em;
+
+                    span {
+                        &:first-of-type {
+                            color: $faded_text;
+                        }
+                    }
+                }
+            }
+
+            .total_amount {
+                font-size: 1.24em;
+                font-weight: bold;
+                margin: 1.2em 0 0;
+            }
+
+            div {
+                margin: 3.2em 0 1em;
+
+                a {
+                    padding: 16px 24px;
+                    background: $themed_background;
+                    color: $themed_color;
+                    font-weight: bold;
+                    border-radius: 32px;
+                }
+            }
+        }
+    }
+}
+
+.Cart {
+    .container {
+        .body {
+            ul {
+                list-style: none;
+                list-style-position: inside;
+                padding: 32px;
+
+                li {
+                    display: grid;
+                    grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
+                    align-items: center;
+                    padding: 16px 4px;
+                    border-bottom: 1px solid $faded_line;
+
+                    span {
+                        &:not(:first-of-type) {
+                            justify-self: center;
+                        }
+
+                        form {
+                            button {
+                                background: none;
+                                
+                                i {
+                                    font-size: 1.2em;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.Checkout {
+    .custom_form {
+        background: #fff;
+        border: none;
+        padding: 32px 2em;
+        width: 88%;
+        margin: auto;
+
+        .inputs {
+            margin: 0 0 1.5em;
+
+            input,
+            select {
+                padding: 8px 16px;
+            }
+        }
+
+        .custom_radio_buttons {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 0.8em;
+        }
+
+        button {
+            background: $themed_background;
+            color: $themed_color;
+        }
+    }
+}
+
+.Sales {
+    form {
+        .order_details {
+            p {
+                display: grid;
+                grid-template-columns: 180px 1fr;
+
+                span {
+                    &:first-of-type {
+                        color: $faded_text;
+                    }
+                }
+            }
+
+            .cart_items {
+                ol {
+                    list-style-position: inside;
+                    margin: 0 0 2em;
+
+                    li {
+                        padding: 6px 0;
+                    }
+                }
+            }
+        }
+
+        .input_group_3 {
+            margin: 2em 0 0.5em;
+        }
+    }
+}
+
 @media screen and (min-width: 726px) {
     .MainApp {
         aside {
@@ -68,6 +238,15 @@
         .app_content {
             .row_container {
                 grid-template-columns: 2fr 1fr;
+            }
+        }
+    }
+
+    .Cart,
+    .Checkout {
+        .container {
+            .body {
+                grid-template-columns: 3fr 1fr;
             }
         }
     }
