--- a/resources/css/__cards.scss
+++ b/resources/css/__cards.scss
@@ -5,6 +5,7 @@
     .card {
         box-shadow: 4px 6px 8px #808080;
         border-radius: 8px;
+        padding: 8px 0;
 
         a {
             color: $text_color;
@@ -13,10 +14,28 @@
         .image {
             height: 300px;
             padding: 4px;
+
+            a {
+                img {
+                    border-radius: 8px;
+                }
+            }
         }
 
         .text {
             padding: 10px 16px 15px;
+
+            .extra_details {
+                margin: 0.8em 0;
+                display: flex;
+                gap: 1.5em;
+
+                span,
+                a {
+                    font-size: 0.88em;
+                    color: $themed_background;
+                }
+            }
 
             .details {
                 .title {
@@ -55,7 +74,7 @@
     
                             span {
                                 font-size: 2.8em;
-                                color: blue;
+                                color: $themed_background;
                             }
                         }
                     }
