--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -12,6 +12,7 @@
 @import "_buttons";
 
 @import "HomePage";
+@import "ShopPage";
 @import "ContactPage";
 @import "Authentication";
 @import "MainApp";
