Dashboard: added the logic for displaying the accurate dashboard details.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1958,7 +1958,7 @@ button:hover {
 }
 
 .Dashboard .section {
-  margin: 0 0 0.8em;
+  margin: 0 0 4em;
 }
 
 .Dashboard .stats {
@@ -1988,6 +1988,10 @@ button:hover {
   color: #575757;
 }
 
+.Dashboard .sales .stat {
+  background: #e6e8ff;
+}
+
 .Dashboard .messages .message {
   border-bottom: 1px solid #c4c4c4;
   padding: 4px 0;
@@ -1995,6 +1999,18 @@ button:hover {
 
 .Dashboard .messages .message p span {
   font-size: 0.8em;
+}
+
+.Dashboard .charts {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 1fr;
+      grid-template-columns: 2fr 1fr;
+  gap: 4em;
+}
+
+.Dashboard .charts h2 {
+  font-size: 1.24em;
 }
 
 @media screen and (min-width: 726px) {
