--- a/resources/css/_Dashboard.scss
+++ b/resources/css/_Dashboard.scss
@@ -1,6 +1,6 @@
 .Dashboard {
     .section {
-        margin: 0 0 0.8em;
+        margin: 0 0 4em;
     }
 
     .stats {
@@ -27,7 +27,12 @@
                 }
             }
         }
+    }
 
+    .sales {
+        .stat {
+            background: $dashboard_background_sales;
+        }
     }
 
     .messages {
@@ -40,6 +45,16 @@
                     font-size: 0.8em;
                 }
             }
+        }
+    }
+
+    .charts {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 4em;
+
+        h2 {
+            font-size: 1.24em;
         }
     }
 }
