--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2013,6 +2013,28 @@ button:hover {
   font-size: 1.24em;
 }
 
+.Dashboard .purchases {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  gap: 2em;
+}
+
+.Dashboard .purchases .purchase {
+  border: 1px solid #c4c4c4;
+  border-radius: 8px;
+  padding: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.6em;
+}
+
 @media screen and (min-width: 726px) {
   .Dashboard .stats {
     -ms-grid-columns: (1fr)[5];
