Print: removed the aside from print pages and added a button for redirecting users to the shopping page after they signup.

--- a/resources/css/__aside.scss
+++ b/resources/css/__aside.scss
@@ -114,3 +114,16 @@ aside {
         }
     }
 }
+
+
+
+@media print {
+    aside {
+        display: none;
+        width: 0;
+    }
+
+    .app_content {
+        margin-left: 0!important;
+    }
+}
